[tool.poetry]
name = "panguvan"
version = "0.1.0"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/panguvan"

packages = [
    {include="panguvan", from="src"},
    {include="panguvan/db", from="src"},
]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
