[tool.poetry]
name = "panguvan"
version = "0.1.1"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/panguvan"

[tool.coverage.run]
source = ["panguvan"]
branch = true


[tool.poetry.dependencies]
python = "^3.10`"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.7"
oxtapus = "^0.2.4"
connectorx = "^0.3.2"
polars = "^0.19.3"
tables = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
