[tool.poetry]
name = "panguvan"
version = "0.1.1"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/panguvan"

[tool.coverage.run]
source = ["panguvan"]
branch = true


[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
